--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-oslo-context (0.1.0-2) UNRELEASED; urgency=medium
+
+  * Now building python-oslo.context and not python-oslo-context.
+
+ -- Thomas Goirand <zigo@debian.org>  Sun, 08 Feb 2015 15:23:52 +0100
+
 python-oslo-context (0.1.0-1) unstable; urgency=medium
 
   * Initial release (Closes: #773622).
