--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-python-oslo-context (0.1.0-2) UNRELEASED; urgency=medium
+python-oslo-context (0.2.0-1) UNRELEASED; urgency=medium
 
+  * New upstream release.
   * Now building python-oslo.context and not python-oslo-context.
 
  -- Thomas Goirand <zigo@debian.org>  Sun, 08 Feb 2015 15:23:52 +0100
