--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-oslo-context (0.2.0-1) UNRELEASED; urgency=medium
+python-oslo-context (0.2.0-1) experimental; urgency=medium
 
   * New upstream release.
   * Now building python-oslo.context and not python-oslo-context.
