--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-oslo-context (0.2.0-2) UNRELEASED; urgency=medium
+
+  * Fixed (build-)depends.
+
+ -- Thomas Goirand <zigo@debian.org>  Mon, 20 Apr 2015 09:16:47 +0200
+
 python-oslo-context (0.2.0-1) experimental; urgency=medium
 
   * New upstream release.
