--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python-oslo-context (0.2.0-2) unstable; urgency=medium
+
+  * Uploading to unstable.
+  * Fixed (build-)depends.
+
+ -- Thomas Goirand <zigo@debian.org>  Mon, 27 Apr 2015 13:06:13 +0000
+
 python-oslo-context (0.2.0-1) experimental; urgency=medium
 
   * New upstream release.
