--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-python-oslo.context (0.3.0-2) UNRELEASED; urgency=medium
+python-oslo.context (0.5.0-1) experimental; urgency=medium
 
+  [ James Page ]
   * Fixup typo in transitional package description (LP: #1471561).
 
- -- James Page <james.page@ubuntu.com>  Thu, 09 Jul 2015 10:42:33 +0100
+  [ Thomas Goirand ]
+  * New upstream release.
+
+ -- Thomas Goirand <zigo@debian.org>  Fri, 04 Sep 2015 10:53:45 +0000
 
 python-oslo.context (0.3.0-1) experimental; urgency=medium
 
