--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ python-oslo.context (0.5.0-1) experimental; urgency=medium
 
   [ Thomas Goirand ]
   * New upstream release.
+  * Fixed build-depends for this release.
 
  -- Thomas Goirand <zigo@debian.org>  Fri, 04 Sep 2015 10:53:45 +0000
 
