--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ python-oslo.context (0.5.0-1) experimental; urgency=medium
   [ Thomas Goirand ]
   * New upstream release.
   * Fixed build-depends for this release.
+  * Watch file using github tag and not broken PyPi anymore.
 
  -- Thomas Goirand <zigo@debian.org>  Fri, 04 Sep 2015 10:53:45 +0000
 
