--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-oslo.context (1.0.0-1) experimental; urgency=medium
+
+  * New upstream release.
+
+ -- Thomas Goirand <zigo@debian.org>  Tue, 01 Dec 2015 11:02:38 +0100
+
 python-oslo.context (0.6.0-2) unstable; urgency=medium
 
   * Uploading to unstable.
