--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-oslo.context (2.1.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- David Della Vecchia <ddv@canonical.com>  Wed, 24 Feb 2016 11:07:03 -0500
+
 python-oslo.context (1.0.1-1) experimental; urgency=medium
 
   * New upstream release.
