--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-oslo.context (2.2.0-2) unstable; urgency=medium
+
+  * Uploading to unstable.
+
+ -- Thomas Goirand <zigo@debian.org>  Mon, 04 Apr 2016 08:54:59 +0000
+
 python-oslo.context (2.2.0-1) experimental; urgency=medium
 
   [ Ondřej Nový ]
