--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-python-oslo.context (2.2.0-3) UNRELEASED; urgency=medium
+python-oslo.context (2.3.0-1) UNRELEASED; urgency=medium
 
+  [ Ondřej Nový ]
   * Standards-Version is 3.9.8 now (no change)
   * d/rules: Changed UPSTREAM_GIT protocol to https
   * d/copyright: Changed source URL to https protocol
 
- -- Ondřej Nový <novy@ondrej.org>  Sat, 09 Apr 2016 19:29:02 +0200
+  [ Corey Bryant ]
+  * New upstream release.
+
+ -- Corey Bryant <corey.bryant@canonical.com>  Mon, 23 May 2016 15:23:07 -0400
 
 python-oslo.context (2.2.0-2) unstable; urgency=medium
 
