--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ python-oslo.context (2.3.0-1) UNRELEASED; urgency=medium
 
   [ Corey Bryant ]
   * New upstream release.
+  * d/control: Align (Build-)Depends with upstream.
 
  -- Corey Bryant <corey.bryant@canonical.com>  Mon, 23 May 2016 15:23:07 -0400
 
