--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-oslo.context (2.4.0-1) UNRELEASED; urgency=medium
+python-oslo.context (2.4.0-1) experimental; urgency=medium
 
   [ Ondřej Nový ]
   * Standards-Version is 3.9.8 now (no change)
@@ -10,7 +10,10 @@ python-oslo.context (2.4.0-1) UNRELEASED; urgency=medium
   * d/control: Align (Build-)Depends with upstream.
   * d/gbp.conf: Update branch to debian/newton.
 
- -- Corey Bryant <corey.bryant@canonical.com>  Tue, 31 May 2016 16:42:00 -0400
+  [ Thomas Goirand ]
+  * Added Corey in the Uploaders: field.
+
+ -- Thomas Goirand <zigo@debian.org>  Sat, 04 Jun 2016 16:38:36 +0000
 
 python-oslo.context (2.2.0-2) unstable; urgency=medium
 
