Fix changelog message.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 python-oslo.context (2.5.0-1) UNRELEASED; urgency=medium
 
-  * New upstream release for OpenStack Newton.
+  * New upstream release.
 
  -- David Della Vecchia <ddv@canonical.com>  Thu, 30 Jun 2016 10:46:08 -0400
 
