--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-python-oslo.context (2.5.0-1) UNRELEASED; urgency=medium
+python-oslo.context (2.5.0-1) experimental; urgency=medium
 
+  [ David Della Vecchia ]
   * New upstream release.
 
- -- David Della Vecchia <ddv@canonical.com>  Thu, 30 Jun 2016 10:46:08 -0400
+  [ Thomas Goirand ]
+  * Switch to pkgos-dh_auto_{test,install}.
+
+ -- Thomas Goirand <zigo@debian.org>  Fri, 01 Jul 2016 14:27:49 +0000
 
 python-oslo.context (2.4.0-1) experimental; urgency=medium
 
