--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ python-oslo.context (2.9.0-2) UNRELEASED; urgency=medium
   * d/s/options: extend-diff-ignore of .gitreview
   * d/control: Using OpenStack's Gerrit as VCS URLs.
 
+  [ Thomas Goirand ]
+  * Fixed oslotest EPOCH.
+
  -- James Page <james.page@ubuntu.com>  Wed, 07 Sep 2016 10:03:59 +0100
 
 python-oslo.context (2.9.0-1) experimental; urgency=medium
