--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-oslo.context (2.9.0-2) UNRELEASED; urgency=medium
+python-oslo.context (2.9.0-2) unstable; urgency=medium
 
   [ James Page ]
   * d/control: Bump mininum version requirement of positional to 1.1.1,
@@ -9,6 +9,7 @@ python-oslo.context (2.9.0-2) UNRELEASED; urgency=medium
   * d/control: Using OpenStack's Gerrit as VCS URLs.
 
   [ Thomas Goirand ]
+  * Uploading to unstable.
   * Fixed oslotest EPOCH.
 
  -- James Page <james.page@ubuntu.com>  Wed, 07 Sep 2016 10:03:59 +0100
